# transformers-from-scratch

./: LICENSE  README.md  pyproject.toml
notebooks/: 01_embeddings.ipynb  02_attention.ipynb  03_multihead.ipynb  04_block.ipynb  05_tiny_transformer.ipynb  06_training.ipynb  transformer_implementation.ipynb
